stylesheets/screen.css
/*Default Values for this theme*/
/*Custom colors*/
/*Fonts*/
/* line 28, ../sass/screen.scss */
body {
  background-color: white;
  min-width: 960px;
  width: auto !important;
  width: 960px;
}

/* line 33, ../sass/screen.scss */
.global-wrapper {
  border-top: 4px solid #4bbbc6;
  font-family: "Droid Sans", Arial, sans-serif;
  color: #898989;
  /* Portlet styles */
  /* Collection */
  /* more carousel styles (content carousels) */
}
/* line 38, ../sass/screen.scss */
.global-wrapper h1, .global-wrapper h2, .global-wrapper h3, .global-wrapper h4, .global-wrapper h5, .global-wrapper h6 {
  color: #575757;
  font-family: "Droid Sans", Arial, sans-serif;
  font-weight: 400;
  line-height: 1.5em;
}
/* line 44, ../sass/screen.scss */
.global-wrapper h1, .global-wrapper h1 a, .global-wrapper h1 a:hover, .global-wrapper h1 a:link {
  font-size: 16px;
  font: "Open Sans", Verdana, sans-serif;
  color: #575757 !important;
  line-height: auto;
}
/* line 50, ../sass/screen.scss */
.global-wrapper h1 {
  height: 32px;
  border-bottom: 1px solid #e9e9e9;
  margin-bottom: 12px;
}
/* line 55, ../sass/screen.scss */
.global-wrapper h2, .global-wrapper h3 {
  font-size: 14px;
}
/* line 58, ../sass/screen.scss */
.global-wrapper h3 {
  color: #4bbbc6;
}
/* line 62, ../sass/screen.scss */
.global-wrapper #viewlet-below-content-title {
  display: none;
}
/* line 66, ../sass/screen.scss */
.global-wrapper .deco {
  color: #4bbbc6 !important;
}
/* line 71, ../sass/screen.scss */
.global-wrapper dl.portlet dt, .global-wrapper div.portletAssignments div.portletHeader,
.global-wrapper #content dt {
  background: none repeat scroll 0 0 transparent;
  line-height: normal;
  font-weight: 400;
  font-family: "Droid Sans", Arial, sans-serif;
  font-size: 13px;
  padding: 0;
  text-transform: uppercase;
  color: #4b4b4b;
}
/* line 86, ../sass/screen.scss */
.global-wrapper .global-header {
  background-color: #a7a7a7;
  overflow: visible;
  position: relative;
  min-height: 120px;
  border-bottom: 2px solid #4bbbc6;
}
/* line 93, ../sass/screen.scss */
.global-wrapper .global-header .headercarousel {
  width: 100%;
  overflow: hidden;
}
/* line 98, ../sass/screen.scss */
.global-wrapper .global-header .headercarousel .carouselWrapper .carousel {
  margin: 0 auto;
  height: 337px;
}
/* line 102, ../sass/screen.scss */
.global-wrapper .global-header .headercarousel .carouselWrapper .carousel div.scrollable {
  /*set default height*/
  height: 337px;
}
/* line 105, ../sass/screen.scss */
.global-wrapper .global-header .headercarousel .carouselWrapper .carousel div.scrollable .items div.itemPadding {
  margin: 0;
}
/* line 108, ../sass/screen.scss */
.global-wrapper .global-header .headercarousel .carouselWrapper .carousel div.scrollable .items div.itemPadding img {
  width: 100%;
  height: auto;
}
/* line 115, ../sass/screen.scss */
.global-wrapper .global-header .headercarousel .carouselWrapper .carousel div.navi {
  display: none;
}
/* line 118, ../sass/screen.scss */
.global-wrapper .global-header .headercarousel .carouselWrapper .carousel a.prev {
  left: 10%;
}
/* line 121, ../sass/screen.scss */
.global-wrapper .global-header .headercarousel .carouselWrapper .carousel a.next {
  right: 10%;
}
/* line 128, ../sass/screen.scss */
.global-wrapper .global-header .headercarousel #portal-content-header img {
  width: 100%;
  height: auto;
}
/* line 135, ../sass/screen.scss */
.global-wrapper .global-header .header-wrapper {
    left: 0;
    margin: 0 auto;
    overflow: visible;
    position: absolute;
    right: 0;
    top: 0;
}
/* line 143, ../sass/screen.scss */
.global-wrapper .global-header .header-wrapper .globalnav {
  text-align: right;
  position: absolute;
  top: 36px;
  right: 0;
  display: block;
  overflow: visible;
  max-width: 810px;
}
/* line 154, ../sass/screen.scss */
.global-wrapper .global-header .header-wrapper #portal-globalnav {
  background-color: transparent;
  margin: 0;
  display: block;
  font-family: "Open Sans", Verdana, sans-serif;
  /* submenu styles */
  /* dev code*/
}
/* line 161, ../sass/screen.scss */
.global-wrapper .global-header .header-wrapper #portal-globalnav li {
  margin-left: 10px;
}
/* line 163, ../sass/screen.scss */
.global-wrapper .global-header .header-wrapper #portal-globalnav li a, .global-wrapper .global-header .header-wrapper #portal-globalnav li a:active, .global-wrapper .global-header .header-wrapper #portal-globalnav li a:visited, .global-wrapper .global-header .header-wrapper #portal-globalnav li a:link, .global-wrapper .global-header .header-wrapper #portal-globalnav li a:hover {
  color: #fff;
  text-transform: uppercase;
  font-size: 12px;
  padding: 8px 15px;
  background: none repeat scroll 0 0 transparent;
  cursor: pointer;
  border: 0 none transparent;
  min-width: 55px;
  width: auto !important;
  width: 55px;
  text-align: center;
  border: 0 none transparent;
}
/* line 177, ../sass/screen.scss */
.global-wrapper .global-header .header-wrapper #portal-globalnav li#portaltab-index_html {
  margin-left: 0;
}
/* line 181, ../sass/screen.scss */
.global-wrapper .global-header .header-wrapper #portal-globalnav li.selected, .global-wrapper .global-header .header-wrapper #portal-globalnav li:hover {
  background-color: #e9ebf0;
  /* background: transparent url('../images/submenu_bg.png') repeat scroll 0 0; */
  border: 1px solid #f6f6f6;
  border-bottom: 1px solid #fff;
  -webkit-border-radius: 2px;
  -moz-border-radius: 2px;
  -ms-border-radius: 2px;
  -o-border-radius: 2px;
  border-radius: 2px;
  -moz-border-radius-bottomleft: 0;
  -webkit-border-bottom-left-radius: 0;
  border-bottom-left-radius: 0;
  -moz-border-radius-bottomright: 0;
  -webkit-border-bottom-right-radius: 0;
  border-bottom-right-radius: 0;
}
/* ... */

